[package]
name = "donoboxd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
cargo-shuttle = "0.44.0"
poise = "0.6.1"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json"] }
scraper = "0.19.0"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.43.0"
shuttle-serenity = "0.43.0"
t_read = { version = "0.1.0", path = "t_read" }
tokio = "1.26.0"
tracing = "0.1.37"
